--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "nodemon reservations/index.js",
+    "build": "webpack --watch --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -11,10 +13,22 @@
   "dependencies": {
     "axios": "^0.20.0",
     "express": "^4.17.1",
-    "react": "^16.13.1"
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
     "eslint": "^7.9.0",
-    "eslint-plugin-react": "^7.21.0"
+    "eslint-plugin-react": "^7.21.0",
+    "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.4.2",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
