--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
+    "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
+    "enzyme-to-json": "^3.5.0",
     "eslint": "^7.9.0",
     "eslint-plugin-react": "^7.21.0",
     "html-webpack-plugin": "^4.5.0",
