--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,11 @@
-module.exports = {
+{
     "env": {
         "browser": true,
         "es6": true,
         "node": true,
         "commonjs": true,
-        "mysql": true
+        "mysql": true,
+        "jest": true
     },
     "extends": [
         "eslint:recommended",
@@ -16,7 +17,7 @@ module.exports = {
     },
     "parserOptions": {
         "ecmaFeatures": {
-            "jsx": true
+            "jsx": true,
         },
         "ecmaVersion": 2018,
         "sourceType": "module"
@@ -26,4 +27,4 @@ module.exports = {
     ],
     "rules": {
     }
-};
+}
