--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "jest --coverage",
     "start": "nodemon reservations/index.js",
-    "build": "webpack --watch --config webpack.config.js"
+    "build": "webpack --watch --config webpack.config.js",
+    "seed": "node database/seeder.js"
   },
   "author": "",
   "license": "ISC",
