--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage",
+    "test": "jest",
     "start": "nodemon reservations/index.js",
     "build": "webpack --watch --config webpack.config.js",
     "seed": "node database/seeder.js"
@@ -14,7 +14,6 @@
   "dependencies": {
     "axios": "^0.20.0",
     "express": "^4.17.1",
-    "jest": "^26.4.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
@@ -33,6 +32,8 @@
     "eslint": "^7.9.0",
     "eslint-plugin-react": "^7.21.0",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.4.2",
+    "react-test-renderer": "^16.13.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
