--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,6 @@
         "es6": true,
         "node": true,
         "commonjs": true,
-        "mysql": true,
         "jest": true
     },
     "extends": [
@@ -17,7 +16,7 @@
     },
     "parserOptions": {
         "ecmaFeatures": {
-            "jsx": true,
+            "jsx": true
         },
         "ecmaVersion": 2018,
         "sourceType": "module"
