--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon reservations/index.js",
     "build": "webpack --watch --config webpack.config.js",
     "seed": "node database/seeder.js",
-    "coverage": "jest --collect-coverage"
+    "coverage": "jest --collect-coverage",
+    "compile": "webpack --webpack.config.js"
   },
   "author": "",
   "license": "ISC",
